--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,7 +70,14 @@ extra_javascript:
 nav:
   - Home: index.md
   - Foundations:
-      - foundations/index.md
+      - Introduction to robotics: foundations/Introduction_to_robotics.md
+      - Introduction to artificial intelligence: foundations/introduction_to_ai.md
+      - AI helping robotics: foundations/combine_ai_and_robotics.md
+      - Challenges in AI for robotics: foundations/Challenges_in_ai_for_robotics.md
+      - Introduction to deep learning:
+        - foundations/why_start_with_deep_learning.md
+        - foundations/introduction_to_deep_learning.md
+      # - Practical Tutorial: Foundations/practical_tutorial.md
   - Deep Learning:
       - deep_learning/index.md
   - Reinforcement Learning:
